# heroesofcode-git

./: .gitignore  .mergify.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  changelog.sh  hoc.sh  mise.toml  release-plz.toml
.cargo/: config.toml
.cursor/skills/pr-summary/: SKILL.md
.github/: renovate.json
.github/scripts/: report-ci.js
.github/workflows/: CI.yml  Release.yml  release-plz.yml
mock/: start-wiremock.sh
mock/mappings/PullRequests/: PullRequests-Success.json
mock/mappings/Repos/: Repos-Success.json
src/: cli.rs  cli_output.rs  clone.rs  lib.rs  main.rs  network.rs  output.rs  pull_requests.rs  repos.rs  utils.rs
src/commands/: clone.rs  list_prs.rs  list_repos.rs  mod.rs
src/github/: client.rs  mod.rs
src/repositories/: mod.rs  pull_requests.rs  repos.rs
tests/: network_tests.rs  pull_requests_tests.rs  repos_tests.rs  utils_tests.rs
