[package]
name = "heroesofcode-git"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.26", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
