[package]
name = "hoc"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
description = "CLI designed to manage and clone repositories from the Heroes of Code organization."
readme = "README.md"
repository = "https://github.com/heroesofcode/heroesofcode-git"

[dependencies]
reqwest = { version = "0.13.0", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
demand = "1.8.0"
console = "0.16.2"
colored = "3.0.0"
httpmock = "0.8.2"
serde_json = "1.0.145"